--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://cdn.shopify.com/s/files/1/0674/9614/9171/files/Aayush_Wellness_1-1-02.png?v=1724413838" />
+  
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -34,7 +34,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Aayush Wellness</title><style>
+    <title>Aayush Wellness</title>
+      <link rel="icon" type="image/x-icon" href="https://cdn.shopify.com/s/files/1/0674/9614/9171/files/Aayush_Wellness_1-1-02.png?v=1724413838" />
+    
+    <style>
       @media screen and (max-width:768px){
         .text-3xl{
         font-family: "EB Garamond", serif  !important;
