--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,41 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Aayush Wellness"
+      content="Empowering healthier lives with Nutrition, Wellness, and Personal Care solutions for everyday needs."
     />
+
+    <link rel="canonical" href="https://www.aayushwellness.com/" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Aayush Wellness" />
+<meta property="og:description" content="Empowering healthier lives with Nutrition, Wellness, and Personal Care solutions for everyday needs." />
+<meta property="og:url" content="https://www.aayushwellness.com/" />
+<meta property="og:site_name" content="Aayush Wellness" />
+<meta property="og:image" content="https://cdn.shopify.com/s/files/1/0653/9830/9053/files/corp_website_img.jpg?v=1736848430" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta property="og:image:alt" content="Aayush Wellness" />
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Aayush Wellness" />
+<meta name="twitter:description" content="Empowering healthier lives with Nutrition, Wellness, and Personal Care solutions for everyday needs." />
+<meta name="twitter:image" content="https://cdn.shopify.com/s/files/1/0653/9830/9053/files/corp_website_img.jpg?v=1736848430" />
+<meta name="twitter:image:alt" content="Aayush Wellness" />
+
+<!-- Additional Meta Tags for SEO -->
+<meta name="robots" content="index, follow" />
+<meta name="author" content="Aayush Wellness" />
+
+
+
+    
+
+
+
+    
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
